test/official_tests/method/missing_arguments.lox
class Foo {
  method(a, b) {}
}

Foo().method(1); // error: {"line":5,"message":"Function 'method' expected 2 arguments but got 1","type":"RuntimeError"}
